--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Source+Serif+Pro&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
